services/authentication/deployments/service/templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: authentication
  labels:
    istio-injection: enabled
