services/authentication/deployments/service/templates/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: authentication
  labels:
    io.kompose.service: authentication
  name: authentication
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: authentication
  template:
    metadata:
      labels:
        io.kompose.service: authentication
      annotations:
        sidecar.istio.io/userVolume: '[{"name":"descriptor","configmap":{"name":"authentication-bied-set","items":[{"key":"authentication.pb","path":"authentication.pb"}]}}]'
        sidecar.istio.io/userVolumeMount: '[{"name":"descriptor","mountPath":"/etc/envoy"}]'
    spec:
      containers:
        - name: authentication
          image: authentication:latest
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: "50m"
          ports:
            - containerPort: 3010
