services/authentication/deployments/service/templates/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: authentication-db
  name: authentication-db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: authentication-db
  template:
    metadata:
      labels:
        io.kompose.service: authentication-db
    spec:
      containers:
        - name: authentication-db
          image: mcr.microsoft.com/mssql/server
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: "50m"
          ports:
            - containerPort: 1433
