services/authentication/deployments/service/templates/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: research-api
  labels:
    io.kompose.service: research-api
  name: research-api
spec:
  ports:
  - name: grpc
    protocol: TCP
    port: 3010
    targetPort: 3010
  selector:
    io.kompose.service: research-api
