services/authentication/deployments/service/templates/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: authentication-db
  name: authentication-db
spec:
  ports:
  - name: "1433"
    port: 1433
    targetPort: 1433
  selector:
    io.kompose.service: authentication-db
