services/authentication/deployments/service/templates/virtualservice.yaml
  
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: authentication-gateway
spec:
  selector:
    app: istio-ingressgateway # This is the default ingress-gateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "authentication.fontysbied.nl"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: authentication
spec:
  gateways:
    - authentication-gateway
  hosts:
    - "authentication.fontysbied.nl" # What inbound Host should be routed. (eg. 'authentication.bied.nl')
  http:
    - match:
        - uri:
            prefix: "/auth"
      rewrite:
        uri: "/auth"
      route:
        # routes it toward this host. Usually a Kubernetes native 'Service', this should be a FQDN in production
        - destination:
            host: authentication
            port:
              number: 3010
